# BanG-SoVITS

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: index.html
patches/: gpt-sovits-macos.patch
public/avatars/: README.md
scripts/: fandom-avatar-pages.tsv  setup-macos.sh
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
